@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- undo: clears dirty, does not delete autosave
 - user's guide:
   - vertical paste & rect select insertion
   - part III
